# UniProject

./: CMakeCache.txt  CMakeLists.txt  INSTALL.md  README.md  build.bat  build.sh
include/: Account.h  Bank.h  Transaction.h  User.h
include/GUI/: AccountScreen.h  AdminPanel.h  Button.h  DashboardScreen.h  LoginScreen.h  Screen.h  TextField.h  TransactionScreen.h  TransferScreen.h  Window.h
src/: Account.cpp  Bank.cpp  Transaction.cpp  User.cpp  main.cpp
src/GUI/: AccountScreen.cpp  AdminPanel.cpp  Button.cpp  DashboardScreen.cpp  LoginScreen.cpp  Screen.cpp  TextField.cpp  TransactionScreen.cpp  TransferScreen.cpp  Window.cpp
